//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  password String [not null]
  name String [unique, not null]
  andreessId Int [not null]
  phone String
  andreess Andreess [not null]
  date_birth DateTime [not null]
  cart Cart [not null]
  productsBought Products [not null]
  productsSold Products [not null]
}

Table supplier {
  id Int [pk, increment]
  name String [not null]
  email String [not null]
  phone String [not null]
  andreess Andreess [not null]
}

Table Products {
  id Int [pk, increment]
  name String [not null]
  price Float [not null]
  promoPrice Float
  promostart1 DateTime
  promoend1 DateTime
  promoamount1 Int
  promostart2 DateTime
  promoend2 DateTime
  promoamount2 Int
  description String [not null]
  problemDescription String [not null]
  quality String [not null]
  image String [not null]
  category Category
  seller User
  buyer User
  cart Cart [not null]
  height Float
  width Float
  depth Float
  weight Float
  salePrice Decimal [not null]
  repairCost Decimal [not null]
  finalPrice Decimal [not null]
  repaired Boolean [not null]
  lastModified DateTime [not null]
  interestedParties Int [not null]
  brand String [not null]
  model String [not null]
  condition String [not null]
  supplierId Int [not null]
  CEP String
  categoryId Int
  sellerId Int
  buyerId Int
  amount Int [default: 0]
  reservedAmount Int [default: 0]
  amountSould Int [default: 0]
}

Table Andreess {
  id Int [pk, increment]
  street String [not null]
  number String [not null]
  city String [not null]
  state String [not null]
  cep String [not null]
  additionalInfo String [default: '']
  supplier supplier
  User User [not null]
  payments Payments [not null]
  supplierId Int
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  products Products [not null]
}

Table Cart {
  id Int [pk, increment]
  userId Int [unique, not null]
  product Products [not null]
  user User [not null]
}

Table Payments {
  id Int [pk, increment]
  userId Int [not null]
  productId Int [not null]
  productName String [not null]
  price Float [not null]
  supplierId Int [not null]
  ProductCEP String [not null]
  andreessId Int [not null]
  andreess Andreess [not null]
}

Table Yolo {
  id Int [pk, increment]
  x Int [not null]
  y Int [not null]
  height Float [not null]
  width Float [not null]
  classes String [not null]
}

Table YoloTraining {
  id Int [pk, increment]
  vectors String [not null]
}

Table YoloImages {
  id Int [pk, increment]
  imageId Int [not null]
  textToImage String [not null]
}

Table CartToProducts {
  cartId Int [ref: > Cart.id]
  productId Int [ref: > Products.id]
}

Ref: User.andreessId > Andreess.id

Ref: Products.categoryId > Category.id

Ref: Products.sellerId > User.id

Ref: Products.buyerId > User.id

Ref: Andreess.supplierId > supplier.id

Ref: Cart.userId > User.id

Ref: Payments.andreessId > Andreess.id